--- a/forge/src/main/resources/META-INF/mods.toml
+++ b/forge/src/main/resources/META-INF/mods.toml
@@ -5,7 +5,7 @@ license = "${license}" # Review your options at https://choosealicense.com/.
 #clientSideOnly=true #optional
 
 [[mods]] #mandatory
-modId = "uecosmetics" #"${mod_id}" #mandatory
+modId = "${mod_id}" #mandatory
 version = "${version}" #mandatory
 displayName = "${mod_name}" #mandatory
 #updateJSONURL="https://change.me.example.invalid/updates.json" #optional, see https://mcforge.readthedocs.io/en/latest/gettingstarted/autoupdate/
