ue: Renamed mod ID

--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,7 @@ java_version=21
 minecraft_version=1.21.2
 mod_name=ue-cosmetics
 mod_author=
-mod_id=ue-cosmetics
+mod_id=uecosmetics
 license=All-Rights-Reserved
 credits=
 description=
