--- a/gradle.properties
+++ b/gradle.properties
@@ -1,31 +1,32 @@
 # Important Notes:
+# fabric.mod.json's modid field cannot be expanded, you must change it manually.
 # Every field you add must be added to the root build.gradle expandProps map.
+
 # Project
-version=1.0-SNAPSHOT
+version=1.0.0
 group=me.yuieii
-java_version=21
+
 # Common
 minecraft_version=1.20.1
-mod_name=ue-cosmetics
-mod_author=
-mod_id=ue-cosmetics
-license=All-Rights-Reserved
-credits=
-description=
-minecraft_version_range=[1.20.1, 1.22)
-neo_form_version=1.20.6-20240627.102356
-# The version of ParchmentMC that is used, see https://parchmentmc.org/docs/getting-started#choose-a-version for new versions
-parchment_minecraft=1.20.1
-parchment_version=2023.09.03
+java_version=17
+
+# Forge
+forge_version=47.2.30
+forge_loader_version_range=[47,)
+forge_version_range=[47,)
+minecraft_version_range=[1.20.1, 1.21)
+
 # Fabric
 fabric_version=0.92.1+1.20.1
-fabric_loader_version=0.16.7
-# Forge
-forge_version=47.3.11
-forge_loader_version_range=[47,)
-# NeoForge
-neoforge_version=21.2.1-beta
-neoforge_loader_version_range=[4,)
+fabric_loader_version=0.15.10
+
+# Mod options
+mod_name=ue-cosmetics
+mod_author=Yuieii
+mod_id=uecosmetics
+license=All-Rights-Reserved
+description=
+
 # Gradle
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
