--- a/forge/src/main/resources/META-INF/mods.toml
+++ b/forge/src/main/resources/META-INF/mods.toml
@@ -11,7 +11,7 @@ displayName = "${mod_name}" #mandatory
 #updateJSONURL="https://change.me.example.invalid/updates.json" #optional, see https://mcforge.readthedocs.io/en/latest/gettingstarted/autoupdate/
 #displayURL="https://change.me.to.your.mods.homepage.example.invalid/" #optional, displayed in the mod UI
 logoFile = "${mod_id}.png" #optional
-credits = "${credits}" #optional
+#credits = "" #optional
 authors = "${mod_author}" #optional
 description = '''${description}''' #mandatory Supports multiline text
 
