--- a/gradle.properties
+++ b/gradle.properties
@@ -4,28 +4,35 @@
 version=1.0-SNAPSHOT
 group=me.yuieii
 java_version=21
+
 # Common
-minecraft_version=1.21.2
+minecraft_version=1.21.6
+minecraft_version_fabric=1.21.6
 mod_name=ue-cosmetics
 mod_author=
 mod_id=uecosmetics
 license=All-Rights-Reserved
 credits=
 description=
-minecraft_version_range=[1.21, 1.22)
-neo_form_version=1.21.2-20241022.151510
+minecraft_version_range=[1.21.6, 1.22)
+neo_form_version=1.21.6-20250617.151856
+
 # The version of ParchmentMC that is used, see https://parchmentmc.org/docs/getting-started#choose-a-version for new versions
-parchment_minecraft=1.21
-parchment_version=2024.06.23
+parchment_minecraft=1.21.5
+parchment_version=2025.06.15
+
 # Fabric
-fabric_version=0.106.1+1.21.2
-fabric_loader_version=0.16.7
+fabric_version=0.127.1+1.21.6
+fabric_loader_version=0.16.14
+
 # Forge
 forge_version=51.0.17
 forge_loader_version_range=[51,)
+
 # NeoForge
-neoforge_version=21.2.1-beta
+neoforge_version=21.6.5-beta
 neoforge_loader_version_range=[4,)
+
 # Gradle
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
