--- a/gradle.properties
+++ b/gradle.properties
@@ -6,16 +6,16 @@ group=me.yuieii
 java_version=21
 
 # Common
-minecraft_version=1.21.6
-minecraft_version_fabric=1.21.6
+minecraft_version=1.21.7
+minecraft_version_fabric=>=1.21.6
 mod_name=ue-cosmetics
 mod_author=
 mod_id=uecosmetics
 license=All-Rights-Reserved
 credits=
 description=
-minecraft_version_range=[1.21.6, 1.22)
-neo_form_version=1.21.6-20250617.151856
+minecraft_version_range=[1.21.6,)
+neo_form_version=1.21.7-20250630.141722
 
 # The version of ParchmentMC that is used, see https://parchmentmc.org/docs/getting-started#choose-a-version for new versions
 parchment_minecraft=1.21.5
