ue: Re-enable the NeoForge version

--- a/neoforge/build.gradle
+++ b/neoforge/build.gradle
@@ -22,9 +22,11 @@ neoForge {
         client {
             client()
         }
-        data {
-            data()
-        }
+
+        // data {
+        //     data()
+        // }
+
         server {
             server()
         }
