--- a/settings.gradle
+++ b/settings.gradle
@@ -47,5 +47,5 @@ plugins {
 rootProject.name = 'ue-cosmetics'
 include('common')
 include('fabric')
-// include('neoforge')
+include('neoforge')
 // include('forge')
