--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -5,7 +5,9 @@ plugins {
 dependencies {
     minecraft "com.mojang:minecraft:${minecraft_version}"
     mappings loom.layered {
-        officialMojangMappings()
+        officialMojangMappings {
+            nameSyntheticMembers = true
+        }
         parchment("org.parchmentmc.data:parchment-${parchment_minecraft}:${parchment_version}@zip")
     }
     modImplementation "net.fabricmc:fabric-loader:${fabric_loader_version}"
